--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 		<div class="site-logo">
 			<a href="index.html" class="avatar">
-				<img src="assets/img/placeholderbanner-1x1.jpg"/>
+				<img src="assets/img/mevsimozkan-profile-big-1x1.jpg"/>
 			</a>
 			<h2 class="name">Mevsim Özkan</h2>
 			<span class="slogan">Senior IB Student</span>
@@ -178,6 +178,7 @@
 									<ul class="list-inline meta mb-2 mt-0">
 										<li class="list-inline-item"><i class="fa-solid fa-calendar"></i> September 2025</li>
 										<li class="list-inline-item"><i class="fa-solid fa-city"></i> Ankara, Turkey</li>
+										<li class="list-inline-item"><i class="fa-solid fa-file"></i> <a href="assets/docs/MevsimOzkan-InternshipReport.pdf" target="_blank"> Internship Report</a></li>
 									</ul>
 									<h4 class="my-0 title"><a href="https://www.hacettepe.edu.tr/" target="_blank">Hacettepe University</a></h4>
 									<p class="mb-0">Intern</p>
@@ -210,11 +211,6 @@
 
 						<div class="col-md-12">
 							<div class="blog-item rounded bg-white">
-								<div class="thumb">
-									<a href="#" class="blog-link" target="_blank">
-										<img src="assets/img/placeholderbanner-32x9.jpg"/>
-									</a>
-								</div>
 								<div class="details">
 									<ul class="list-inline meta mb-2 mt-0">
 										<li class="list-inline-item"><i class="fa-solid fa-calendar"></i>March 2025</li>
@@ -282,6 +278,10 @@
 					<h2 class="section-title">Extracurricular Activities</h2>
 
 					<div class="row gy-4">
+
+						<div class="col-md-12 text-center">
+							<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/voHOrgd-26E?si=WwmkxWAQwoZvOyT0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+						</div>
 
 						<div class="col-md-6">
 							<div class="blog-item rounded bg-white">
@@ -400,7 +400,7 @@
 			<div class="section-inner">
 				<div class="container-fluid">
 
-					<h2 class="section-title">Photography</h2>
+					<h2 class="section-title">Gallery</h2>
 
 					<div id="gallery" class="galimg">
 
