CV updated and fixed

--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
 											<li>Taking historical and modern examples from graphic design history, studied different “logo” designs</li>
 											<ul>
 												Made my own portfolio of physical traditional media work inspired by rug, light, and graphic design research
-												<li><a href="assets/docs/MevsimOzkan-BTECLvl3ArtDesign-RugProjects.pdf" target="_blank">Rugs</a></li>
-												<li><a href="assets/docs/MevsimOzkan-BTECLvl3ArtDesign-GraphicLogoLightProjects.pdf" target="_blank">Graphic Design, Logo & Light</a></li>
+												<li><b>Rugs</b>: <a href="assets/docs/MevsimOzkan-BTECLvl3ArtDesign-RugProjects.pdf" target="_blank">Digital Portfolio</a>, <a href="assets/docs/MevsimOzkan-BTECLvl3ArtDesign-RugProjects-Physical.pdf" target="_blank">Physical Portfolio</a></li>
+												<li><b>Graphic Design, Logo & Light</b>: <a href="assets/docs/MevsimOzkan-BTECLvl3ArtDesign-GraphicLogoLightProjects.pdf" target="_blank">Digital Portfolio</a>, <a href="assets/docs/MevsimOzkan-BTECLvl3ArtDesign-GraphicLogoLightProjects-Physical.pdf" target="_blank">Physical Portfolio</a></li>
 											</ul>
 										</ul>
 									</p>
@@ -180,7 +180,7 @@
 										<li class="list-inline-item"><i class="fa-solid fa-city"></i> Ankara, Turkey</li>
 										<li class="list-inline-item"><i class="fa-solid fa-file"></i> <a href="assets/docs/MevsimOzkan-InternshipReport.pdf" target="_blank"> Internship Report</a></li>
 									</ul>
-									<h4 class="my-0 title"><a href="https://www.hacettepe.edu.tr/" target="_blank">Hacettepe University</a></h4>
+									<h4 class="my-0 title"><a href="https://www.hacettepe.edu.tr/english" target="_blank">Hacettepe University</a></h4>
 									<p class="mb-0">Intern</p>
 									<p class="mb-0">
 										<ul>
@@ -406,6 +406,19 @@
 
 						<img src="assets/img/mevsimozkan-ihc2025.jpg">
 						<img src="assets/img/mevsimozkan-yga.jpg">
+
+					</div>
+
+					<h3 class="section-title my-2">Mexico Trip</h3>
+
+					<div id="gallery" class="galimg">
+
+						<img src="assets/img/mevsimozkan-mexico-01.jpeg">
+						<img src="assets/img/mevsimozkan-mexico-02.jpg">
+						<img src="assets/img/mevsimozkan-mexico-03.jpg">
+						<img src="assets/img/mevsimozkan-mexico-04.jpg">
+						<img src="assets/img/mevsimozkan-mexico-05.jpg">
+						<img src="assets/img/mevsimozkan-mexico-06.jpg">
 
 					</div>
 
